fixes, hopefully heroku will work now

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       }
       //alert("vidi")
       console.log(Params);
-      fetch(`https://opinion-classifier.herokuapp.com/api/processRequest?text=${msg}`, Params)
+      fetch(`http://127.0.0.1:5000/api/processRequest?text=${msg}`, Params)
         .then(response => {
           return response.json();
         })
