--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
               <p><a href="https://github.com/Naimish240/OpinionClassifier" target="_blank">Read more</a></p>
             </div>
           </div>
+          <div class="row align-items-center">
+            <h3 class="mb-4">Note:</h3>
+            <p>On Heroku, if a site does not recieve any inbound requests for a while, the instance automatically gets put into sleep. So, if you're the first viewer to the site after a long time, it might take a few seconds for the server to restart. Also, the pop up box might take a couple of seconds to update with the correct image and labels.
+            </p>
+            <p><a href="https://opinion-classifier.herokuapp.com/" target="_blank">Check if the API server is online</a></p>
+          </div>
 
           <!-- Modal -->
           <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
@@ -151,5 +157,10 @@
   <script src="src/js/jquery-3.3.1.min.js"></script>
   <script src="src/js/bootstrap.min.js"></script>
 </body>
+<footer class="footer">
+  <div class="container">
+    <span class="text-muted">Made with love by <a href="https://naimish240.github.io/">Naimish</a></span>
+  </div>
+</footer>
 
 </html>
